# scival_authors

./: .gitignore  pipeline.py  pyproject.toml  query.ipynb
func/: authors.sql  defined_author_count.sql  ext_author_count.sql  external_authors.sql  field_map.py  group_dois.sql  mark_with_external_authors.sql  openalex_authors.sql  openalex_download.py  publication_authors_connect.sql  publication_external_authors_connect.sql  rank_pairs.sql  rank_sum.sql  split_authors.py  utils.py
func/csml/: __init__.py  csml_record.sql  csml_record_affiliation.sql  csml_record_author.sql  csml_record_author_rel_affiliation.sql  csml_record_relation.sql  csml_source.sql  csml_type_database_record.sql  csml_type_state_load.sql  pipeline.py
func/padded_csv/: __init__.py  click.py  reader.py
