[tool.poetry]
name = "scival-authors"
version = "0.1.0"
description = ""
authors = ["snorkysnark <snorkysnark@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ralsei = {path = "/home/lisk/Code/ralsei/ralsei", develop = true}
notebook = "^7.2.2"
polars = "^1.6.0"
connectorx = "^0.3.3"
pyarrow = "^17.0.0"
xlsxwriter = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
